--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,39 @@
 /* Standard setup for most projects  */
 
+:root {
+    --primary-color: #22254b;
+    --secondary-color: #373b69;
+}
+
 body {
-    background-color: rgb(255, 255, 255);
     font-family: 'Roboto', sans-serif;
     margin: 0;
+    background-color: var(--primary-color);
+}
+
+header {
+    padding: 1rem;
     display: flex;
-    /* aligns content */
-    flex-direction: column;
-    /* stacks content  */
-    align-items: center;
-    /* centers content */
-    justify-content: center;
-    height: 100vh;
-    /* takes up 100% of the viewport height  */
-    overflow: hidden;
-    /* prevents scroll bard from showing by default  */
+    justify-content: flex-end;
+    background-color: var(--secondary-color);
+
+}
+
+.search {
+    background-color: transparent;
+    border: 2px solid var(--primary-color);
+    border-radius: 50px;
+    font-family: inherit;
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
+    color: rgb(255, 255, 255);
+}
+
+.search::placeholder {
+    color: #adaaaa;
+}
+
+.search:focus {
+    outline: none;
+    background-color: var(--primary-color);
 }
