--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 
 :root {
     --primary-color: #22254b;
+    /* custom color name */
     --secondary-color: #373b69;
 }
 
@@ -36,4 +37,31 @@ header {
 .search:focus {
     outline: none;
     background-color: var(--primary-color);
+}
+
+/* changes color when the user clicks into the search bar */
+
+main {
+    display: flex;
+    /* puts the divs in a row */
+    flex-wrap: wrap;
+    /* wraps the divs depedning on screen size */
+}
+
+.movie {
+    width: 300px;
+    margin: 1rem;
+    background-color: var(--secondary-color);
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
+    position: relative;
+    /* allows us to position other tings inside it absolute */
+    overflow: hidden;
+    border-radius: 3px;
+
+}
+
+.movie img {
+    width: 100%;
+    /* 100% of its container  */
+
 }
