--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,6 @@ header {
     display: flex;
     justify-content: flex-end;
     background-color: var(--secondary-color);
-
 }
 
 .search {
@@ -37,9 +36,8 @@ header {
 .search:focus {
     outline: none;
     background-color: var(--primary-color);
+    /* changes color when the user clicks into the search bar */
 }
-
-/* changes color when the user clicks into the search bar */
 
 main {
     display: flex;
@@ -57,11 +55,59 @@ main {
     /* allows us to position other tings inside it absolute */
     overflow: hidden;
     border-radius: 3px;
-
 }
 
 .movie img {
     width: 100%;
     /* 100% of its container  */
+}
+
+.movie-info {
+    color: #eee;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 1rem 1rem;
+}
+
+.movie-info h3 {
+    margin-top: 0;
+}
+
+.movie-info span {
+    background-color: var(--primary-color);
+    padding: .25rem 0.5rem;
+    border-radius: 3px;
+    font-weight: bold;
+}
+
+.movie-info span.green {
+    color: lightgreen;
+}
+
+.movie-info span.orange {
+    color: orange;
+}
+
+.movie-info span.red {
+    color: red;
+}
+
+.overview {
+    background-color: white;
+    padding: 2rem;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    max-height: 100%;
+    transform: translateY(101%);
+    /* moves the overview div down and completely out of view, it will then be brought back on hover */
+    transition: transform 0.3s ease-in;
+
+}
+
+.movie:hover .overview {
+    transform: translateY(0);
 
 }
