--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,11 @@ header {
     background-color: var(--secondary-color);
 }
 
+
+#logo {
+    font-size: 0.1rem;
+}
+
 .search {
     background-color: transparent;
     border: 2px solid var(--primary-color);
